# 13f-tracker

./: .env.example  .gitignore  README.md  build_static.py  pyproject.toml  render.yaml  update.sh
config/: fool_posters.yaml  investors.yaml
docs/: index.html
docs/investor/0001067983/: index.html
docs/investor/0001336528/: index.html
docs/investor/0001536411/: index.html
docs/investor/0001569205/: index.html
docs/investor/0001649339/: index.html
docs/sauls/: index.html
docs/sauls/anthonyms/: index.html
docs/sauls/prust04/: index.html
docs/sauls/wpr101/: index.html
src/: analyzer.py  database.py  edgar_client.py  fool_parser.py  fool_scraper.py  fool_tracker.py  letters.py  notifier.py  parser.py  scanner.py  tracker.py  web.py
templates/: base.html  index.html  investor.html  sauls.html  sauls_poster.html
